--- a/style.css
+++ b/style.css
@@ -596,21 +596,21 @@ padding:0;
     background-repeat:no-repeat;
     background-size:100% 100%;
     width: 100%;
-    height:790px;
     opacity:0.9;
     margin:0;
     padding:0;
     text-align:center;
     color:white;
+    flex:1;
  }
 
  .about1 h1 {
-    font-size:80px;
+    font-size:8rem;
     color:white;
     font-family:'Halloween Too', 'Times New Roman', serif; 
     margin:0;
     padding:0;
-    text-shadow:2px 2px darkgrey;
+    text-shadow:0.2rem 0.2rem darkgrey;
  }
  .about1 h2 {
     font-size:40px;
