--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*Setting root element (html)*/
 html {
-   font-size:62.5%;
+   font-size:calc(10px + 0.390625vw);
    margin:0;
    padding:0;
 }
@@ -41,14 +41,13 @@ src:url('FREAKY HALLOWEEN.otf');
     overflow:hidden;
     display:flex;
     flex-wrap:wrap;
-    min-height:3.9rem;
  }
  
  .hornavbar a {
     display:block;
     text-decoration:none;
-    padding:0.8rem  1.2rem;
-    font-size:2rem;
+    padding:0.5rem  1.2rem;
+    font-size:1.2rem;
     color:white;
     text-align:center;
  }
@@ -64,9 +63,9 @@ src:url('FREAKY HALLOWEEN.otf');
  .footer {
     background-color:#333;
     color:white;
-    font-size:3rem;
+    font-size:1.2rem;
     text-align:center;
-    min-height:12rem;
+    overflow:hidden;
  }
 
  .footer ul {
@@ -83,7 +82,7 @@ src:url('FREAKY HALLOWEEN.otf');
     text-decoration:none;
     color:white;
     margin:0;
-    padding:0.8rem 1.6rem;
+    padding:0.2rem 1.6rem;
  }
 
  .footer a:hover {
@@ -110,7 +109,22 @@ src:url('FREAKY HALLOWEEN.otf');
         height:auto;
         overflow:hidden;
     }
-    
+
+    @media screen and (max-width:370px) {
+      .main11 h1 {
+         font-size:3rem;
+      }
+      .main11 h1 sup {
+         font-size:3rem;
+      }
+   }
+   
+   @media screen and (max-width:260px) {
+      .main11 h2 {
+         font-size:2rem;
+      }
+   }
+    /*
     .main11 h1 {
       font-size:5rem;
       text-shadow:0.3rem 0.3rem black, 0.2rem 0.2rem grey;
@@ -145,7 +159,7 @@ src:url('FREAKY HALLOWEEN.otf');
       font-size:2rem;
     }
 
-    
+    */
 
 
 
@@ -162,7 +176,8 @@ src:url('FREAKY HALLOWEEN.otf');
     background-repeat:no-repeat;
     background-size:100% 100%;
     opacity:0.8;
-    padding:0.8rem;
+    padding:1rem;
+    overflow:auto;
  }
 
 
@@ -176,28 +191,28 @@ src:url('FREAKY HALLOWEEN.otf');
  }
 
  .main11 h1 {
-    font-size:10rem;
+    font-size:5rem;
     font-family:"Halloween Too", "Times New Roman", serif;
     text-align:center;
     color:white;
-    text-shadow:0.6rem 0.6rem #111, 0.3rem 0.3rem grey;
+    text-shadow:0.4rem 0.3rem #111, 0.5rem 0.4rem grey;
     margin:0;
  }
 
  .main11 h1 sup {
-   font-size:7rem;
+   font-size:5rem;
    text-shadow:0.3rem 0.3rem #111, 0.4rem 0.4rem grey;
  }
 
  .main11 h2 {
-    font-size:6rem;
+    font-size:3rem;
     color:coral;
     text-align:center;
     text-shadow:0.3rem 0.3rem black;
  }
 
  .main11 p {
-    font-size:4rem;
+    font-size:2rem;
     font-family:'Halloween Too', 'Times New Roman', serif;
     color:red;
     text-align:center;
@@ -218,7 +233,7 @@ src:url('FREAKY HALLOWEEN.otf');
 
  .main2 h2 {
     color:coral;
-    font-size:6rem;
+    font-size:3rem;
     font-family:'Halloween Too', 'Times New Roman', serif;
     margin:0;
     padding:2rem; 
@@ -227,17 +242,17 @@ src:url('FREAKY HALLOWEEN.otf');
  .main2 div {
     color:white;
     font-weight:bold;
-    font-size:4rem;
+    font-size:2.5rem;
  }
 
  .main2 ol {
     list-style-type:lower-alpha;
-    font-size:3rem;
+    font-size:2rem;
     font-weight:bold;
     color:white;
     list-style-position:inside;
     text-shadow:0.1rem 0.1rem black;
-    line-height:2;
+    line-height:1.5;
  }
 
  /*Setting the style for third division "main3" of body section*/
@@ -253,13 +268,13 @@ src:url('FREAKY HALLOWEEN.otf');
 
  .main3 h2 {
     color:coral;
-    font-size:6rem;
+    font-size:3rem;
     font-family:'Halloween Too', 'Times New Roman', serif;
  }
 
  /*Setting the style of form label*/
  .main3 form label {
-    font-size:4rem;
+    font-size:2rem;
     display:inline-block;
     text-align:center;
  }
@@ -273,10 +288,10 @@ src:url('FREAKY HALLOWEEN.otf');
  }
 
  .fnameclass {
-    font-size:1.5vw;
+    font-size:1rem;
     padding:8px;
     margin:5px;
-    width:450px;
+    width:400px;
     margin-left:auto;
     margin-right:auto;
     display:inline-block;
@@ -284,13 +299,15 @@ src:url('FREAKY HALLOWEEN.otf');
 
  .subbut {
     padding:8px 16px;
-    font-size:2vw;
+    font-size:2rem;
+    margin:10px 10px;
     font-family:'Halloween Too', 'Times New Roman', serif;
  }
 
  .res {
     padding:8px 16px;
-    font-size:2vw;
+    font-size:2rem;
+    margin:10px 10px;
     font-family:'Halloween Too', 'Times New Roman', serif;
  }
 
@@ -640,20 +657,20 @@ padding:0;
  }
 
  .about1 h1 {
-    font-size:10rem;
+    font-size:5rem;
     color:white;
     font-family:'Halloween Too', 'Times New Roman', serif; 
     margin:0;
     padding:0;
-    text-shadow:0.6rem 0.6rem #111, 0.3rem 0.3rem grey;
+    text-shadow:0.3rem 0.3rem #111, 0.4rem 0.4rem grey;
  }
  .about1 p, address {
-    font-size:4rem;
+    font-size:2rem;
     color:white;
     font-family:'Times New Roman', serif;
     margin:0;
     padding:0;
-    text-shadow:0.2rem 0.2rem black;
+    text-shadow:0.1rem 0.1rem black;
  }
 
 
@@ -673,7 +690,6 @@ padding:0;
     background-repeat:no-repeat;
     background-size:100% 100%;
     width:100%;
-    height:790px;
     opacity:0.9;
     text-align:center;
     flex:1;
