--- a/style.css
+++ b/style.css
@@ -562,7 +562,7 @@ z-index:1;
     background-size:100% 100%;
     opacity:0.9;
     margin:0;
-    padding:0;
+    padding:1rem;
     text-align:center;
     color:white;
     flex:1;
