The js code to show or hide navbar below 600px is replaced with css target pseudo class. And navbar is given z index 5 so that it can stack on top of everything.

--- a/style.css
+++ b/style.css
@@ -156,9 +156,17 @@ body {
    width:calc(100vw - 50px);
    flex-direction:column;
    align-items:center;
-   z-index:1;
+   z-index:5;
    padding-top:1rem;
    background:#555;
+}
+
+.navbar:target {
+   display:block;
+}
+
+.navbar:not(:target) {
+   display:none;
 }
 
 #closemenu {
